# homelab

./: .env.example  .gitignore  README.md  Taskfile.yml
.task/checksum/: build-agent-gateway
k8s/argocd/: application.yaml  ingress.yaml  repo-secret.yaml
k8s/base/: agent-gateway.yaml  auth-server.yaml  configmap.yaml  ingress.yaml  jaeger.yaml  keycloak-db.yaml  keycloak.yaml  kustomization.yaml  metrics-db.yaml  metrics-service.yaml  namespace.yaml  registry.yaml  secrets.yaml
k8s/gitea/: ingress.yaml
k8s/overlays/local/: kustomization.yaml
services/agent-gateway/: Dockerfile  pyproject.toml
services/agent-gateway/src/: agent_service.py  auth.py  config.py  main.py  mcp_client.py  models.py  ollama_service.py
tasks/: argocd.yml  build.yml  cluster.yml  deploy.yml  logs.yml  secrets.yml  test.yml
